# redshifty

./: .gitignore  PRODUCTION_RUN_PLAN.md  README.md  RESEARCH_LOG.md  pyproject.toml  requirements.txt
data/: .gitkeep  download_desi.py
data/desi_raw/: coadd-sv3-bright-10145.fits  redrock-sv3-bright-10016.fits
nersc/: README.md  _wandb_util.py  build_dr1_index.py  ddp_template.slurm  dr1_dataset.py  dr1_tokenized_dataset.py  export_ddp_vars.sh  pretrain_tokenizer.py  pretrain_tokenizer.slurm  pretrain_tokenizer_ddp.slurm  pretrain_tokenizer_v2.py  pretrain_tokenizer_v2_s1.slurm  push_tokenizer_artifact.py  setup_env.sh  smoke_tokenizer.slurm  smoke_tokenizer_v2.slurm  smoke_transformer.slurm  stage_to_scratch.py  stage_to_scratch.slurm  sync_metrics_to_wandb.py  train_transformer.py  train_transformer.slurm  train_transformer_ddp.slurm  train_transformer_option_a.slurm  train_transformer_v2.slurm
notebooks/: 01_explore_desi_spectra.ipynb  02_tokenizer.ipynb  03_redshift_tokenizer.ipynb  04_transformer.ipynb  05_training_visualization.ipynb  06_autoregressive_generation.ipynb  07_visualize_predictions.ipynb
scripts/: download_desi_batch.py  evaluate.py  generate.py  smoke_redshift_v2.py  smoke_test.py  test_tokenizer_batch.py  test_tokenizer_norm.py  train.py  visualize_spectra.py
src/: __init__.py
src/models/: __init__.py  (+1 more)
tests/: test_data.py  test_dataset.py  test_ddp.py  test_imports.py  test_redshift_tokenizer.py  test_redshift_tokenizer_v2.py  test_sequences_v1_v2.py  test_tokenizer.py  test_tokenizer_v2.py  test_training_helpers.py  test_transformer.py
(+16 files in other folders)
